--- a/game.html
+++ b/game.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>ASTEROIDS - REMASTERED</title>
-    <style></style>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Cure19</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
 <body>
+  <script src="script.js"></script>
+  <div class="menu">
+    <hr style="border: 1px solid white"/>
+    <table style = "width: 80%; margin-left: 10%; margin-right: 10%"><tr>
+    <td style = "width: 33.3%"> <a href = "index.html" class = "yeet"> Home </a> </td>
+    <td style = "width: 33.3%"> <a href = "game.html" class = "yeet"> COVID Game </a> </td>
+    <td style = "width: 33.3%"> <a href = "resources.html" class = "yeet"> Resources </a> </td>  
+    </tr></table>
+    <hr style="border: 1px solid white"/>
+  </div>
+  <br>
     <canvas id="gameCanvas" width="760" height="570"></canvas>
     <script>
         const FPS = 30; 
