--- a/resources.html
+++ b/resources.html
@@ -18,4 +18,18 @@
       <hr style="border: 1px solid white"/>
     </div>
     <br>
+    <br>
+    <br>
+    <div class = "block"> 
+    <h3 style = "color: #b19cd9;"> Resources </h3>
+    <p>To learn more about COVID and gain useful information, we have complied a list of valuable COVID Resources:</p>
+
+    <ul style = "margin-left: 4%">
+      <li> <a href = "https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/checklist-household-ready.html">Household Checklist </a> </li>
+      <li> <a href = "https://www.webmd.com/fitness-exercise/ss/slideshow-sitting-health"> Web MD </a> </li>
+      <li> <a href = "https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf"> Informational Guide to COVID </a></li>
+      <li> <a href = "https://mhanational.org/covid19"> Mental Health During COVID </a></li>
+    </ul>
+    </div>
+
   </body>
