--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
   </head>
 
 <body>
+  <div class = "game">
   <script src="script.js"></script>
   <div class="menu">
     <hr style="border: 1px solid white"/>
@@ -685,6 +686,7 @@
             }
         }
     </script>
+  </div>
 </body>
 
 </html>
