--- a/resources.html
+++ b/resources.html
@@ -29,6 +29,8 @@
       <li> <a href = "https://www.webmd.com/fitness-exercise/ss/slideshow-sitting-health"> Web MD </a> </li>
       <li> <a href = "https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf"> Informational Guide to COVID </a></li>
       <li> <a href = "https://mhanational.org/covid19"> Mental Health During COVID </a></li>
+      <li> <a href = "https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf"> Informational Guide to COVID </a></li>
+      <li> <a href = "https://unitedwaysem.org/covid-19-toolkit/">  COVID Toolkit</a></li>
     </ul>
     </div>
 
