--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
  <!--navigation-------------------------------->
  <nav>
  <!--logo--->
- <a href="#" class="logo">Cure 19</a>
+ <a href="index.html" class="logo">Cure 19</a>
  <!--menu--------->
  <div class="toggle"></div>
  <ul class="menu">
- <li class="active"><a href="#main" >Home</a></li> 
+ <li class="active"><a href="index.html" >Home</a></li> 
  <li><a href="#1">Cure19 Game</a></li> 
  <li><a href="#2">Leaderboard</a></li>
- <li><a href="#3">Resources</a></li>    
+ <li><a href="resources.html">Resources</a></li>    
  </ul>
  <!--language-->
  <a href="#" class="lang">ENG</a>
