--- a/resources.html
+++ b/resources.html
@@ -1,11 +1,32 @@
-<!DOCTYPE html>
+<!--doctype html-->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Cure19</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+<head>
+<meta charset="utf-8">
+<title>Cure-19</title>
+<meta http-equiv="X-UA-Compatible" content="IE-edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--title-icon--------->
+<link rel="shortcut icon" href="icon.png">
+<link rel="stylesheet" type="text/css" href="style.css"/>
+</head>
+<body>
+ <!--main------------------------>
+ <section id="main">
+ <!--navigation-------------------------------->
+ <nav>
+ <!--logo--->
+ <a href="index.html" class="logo">Cure 19</a>
+ <!--menu--------->
+ <div class="toggle"></div>
+ <ul class="menu">
+ <li class="active"><a href="index.html" >Home</a></li> 
+ <li><a href="#1">Cure19 Game</a></li> 
+ <li><a href="#2">Leaderboard</a></li>
+ <li><a href="resources.html">Resources</a></li>    
+ </ul>
+ <!--language-->
+ <a href="#" class="lang">ENG</a>
+ </nav>
   <body>
     <script src="script.js"></script>
     <div class="menu">
