--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
  <!--language-->
  <a href="#" class="lang">ENG</a>
  </nav>
+
+ <!-- Add Video Background -->
+ <div class="video-container">
+    <div class="color-overlay"></div>
+    <video autoplay loop muted>
+        <source src="Cure19.mp4" type="video/mp4">
+    </video>
+  </div>
  <!--name--------------------------->
  <div class="name">
  <!--name--->
@@ -59,6 +67,7 @@
   <img src="s1.png">
  </div>
  <!--text----------------->
+
  <div class="s-b-text">
  <a href="#">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a> 
  </div>
