--- a/resources.html
+++ b/resources.html
@@ -41,8 +41,10 @@
     <br>
     <br>
     <br>
-    <div class = "block"> 
-    <h3 style = "color: #b19cd9;"> Resources </h3>
+    <div class = "name"> 
+    <h2 style = "color: #b19cd9;"> Resources </h2>
+
+    <div class = "details">
     <p>To learn more about COVID and gain useful information, we have complied a list of valuable COVID Resources:</p>
 
     <ul style = "margin-left: 4%">
@@ -52,5 +54,5 @@
       <li> <a href = "https://mhanational.org/covid19"> Mental Health During COVID </a></li>
     </ul>
     </div>
-
+    </div>
   </body>
