--- a/Nhacks-master-master/Nhacks-master-master/resources.html
+++ b/Nhacks-master-master/Nhacks-master-master/resources.html
@@ -51,7 +51,7 @@
    </div>
    <!--text----------------->
    <div class="s-b-text">
-   <a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/checklist-household-ready.html">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a> 
+   <a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/checklist-household-ready.html">Get your household ready for COVID-19. As a family, you can plan and make decisions now that will protect you and your family. - Centers for Disease Control and Prevention.</a> 
    </div>
    </div>
     <!--box-2---------------->
@@ -61,11 +61,11 @@
    <!--type----------->
     <div class="s-type">COVID-19-Guide</div>
     <!--name------->
-    <img src="virus.png">
+    <img src="rvirus.png">
    </div>
    <!--text----------------->
    <div class="s-b-text">
-   <a href="https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a> 
+   <a href="https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf">A guide to stay safe and protect you and your loved ones from COVID-19.</a> 
    </div>
    </div>
     <!--box-3---------------->
@@ -79,7 +79,7 @@
    </div>
    <!--text----------------->
    <div class="s-b-text">
-   <a href="https://mhanational.org/covid19">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a> 
+   <a href="https://mhanational.org/covid19">As the number of cases of COVID-19 increases, so does the associated anxiety. For the general public, the mental health effects of COVID-19 are as essential to address as are the physical health effects. And for the one in five who already have mental health conditions – or the one in two who are at risk of developing them – we need to take personal, professional, and policy measures now to address them. To aid individuals and communities during this time, MHA has compiled a range of resources and information. - MHA</a> 
    </div>
    </div>
    </div>
@@ -87,70 +87,7 @@
   
    </div>
    </section>
-   <!--Contact-btn------------------>
-   <section id="contact-btn">
-   <!--heading-------------->
-   <h1 class="c-b-heading">Got a High Score you want to share ?</h1>
-   <!--btn-------->
-    <button >Contact us</button>
-   </section>
-   <!--contact-form------------------->
-   <section id="contact-form">
-   <form>
-   <!--left--------------------------------------->
-   <div class="contact-left">
-   <h1 class="c-l-heading"><font style="border-bottom: 3px solid #ad0000;">nee</font>d help?</h1>
-   <!--name-------->
-   <div class="f-name">
-   <font >Name</font>
-   <input type="text" placeholder="Full Name"/>
-   </div>
-   <!--email-------->
-   <div class="f-email">
-   <font >Email</font>
-   <input type="email" placeholder="Example@gmail.com"/>
-   </div>
-   </div>
-   <!--right------------------------------------------->
-   <div class="contact-right">
-   <!--message-------->
-   <div class="message">
-   <font >Message</font>
-   <textarea name="message" rows="5" cols="20" placeholder="Write Message..."></textarea>
-   </div>
-   <!--submit-btn------------>
-   <button>submit</button>
-   </div>
-    
-   </form>
    
-   </section>
-  
-  </body>
-  </html></title>
-<meta http-equiv="X-UA-Compatible" content="IE-edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--title-icon--------->
-<link rel="shortcut icon" href="icon.png">
-<link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<body>
- <!--main------------------------>
- <section id="main">
- <!--navigation-------------------------------->
- <nav>
- <!--logo--->
- <a href="index.html" class="logo">Cure 19</a>
- <!--menu--------->
- <div class="toggle"></div>
- <ul class="menu">
- <li><a href="index.html" >Home</a></li> 
- <li><a href="#1">Cure19 Game</a></li> 
- <li><a href="#2">Leaderboard</a></li>
- <li class="active"><a href="resources.html">Resources</a></li>    
- </ul>
- <!--language-->
- <a href="#" class="lang">ENG</a>
  </nav>
   <body>
     </ul>
