--- a/Nhacks-master-master/Nhacks-master-master/index.html
+++ b/Nhacks-master-master/Nhacks-master-master/index.html
@@ -68,7 +68,7 @@
       </div>
       <!--text----------------->
       <div class="s-b-text">
-      <a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/checklist-household-ready.html">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a> 
+      <a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/checklist-household-ready.html">Get your household ready for COVID-19. As a family, you can plan and make decisions now that will protect you and your family. - Centers for Disease Control and Prevention.</a> 
       </div>
       </div>
        <!--box-2---------------->
@@ -82,7 +82,7 @@
       </div>
       <!--text----------------->
       <div class="s-b-text">
-      <a href="https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a> 
+      <a href="https://www.nami.org/Support-Education/NAMI-HelpLine/COVID-19-Information-and-Resources/COVID-19-Guide.pdf">A guide to stay safe and protect you and your loved ones from COVID-19.</a> 
       </div>
       </div>
        <!--box-3---------------->
@@ -96,7 +96,7 @@
       </div>
       <!--text----------------->
       <div class="s-b-text">
-      <a href="https://mhanational.org/covid19">With Divi, every part of your website is customizable. You have complete freedom to create the perfect website for you or your clients. Easily change colors, fonts and text styles. Apply stunning animations.</a>  
+      <a href="https://mhanational.org/covid19">As the number of cases of COVID-19 increases, so does the associated anxiety. For the general public, the mental health effects of COVID-19 are as essential to address as are the physical health effects. And for the one in five who already have mental health conditions – or the one in two who are at risk of developing them – we need to take personal, professional, and policy measures now to address them. To aid individuals and communities during this time, MHA has compiled a range of resources and information. - MHA</a>  
  </div>
  </div>
  </div>
