--- a/Nhacks-master-master/Nhacks-master-master/resources.html
+++ b/Nhacks-master-master/Nhacks-master-master/resources.html
@@ -24,8 +24,8 @@
    <div class="toggle"></div>
    <ul class="menu">
    <li class="active"><a href="index.html" >Home</a></li> 
-   <li><a href="#1">Cure19 Game</a></li> 
-   <li><a href="#2">Leaderboard</a></li>
+   <li><a href="game.html">Cure19 Game</a></li> 
+   <li><a href="leaderboard.html">Leaderboard</a></li>
    <li><a href="resources.html">Resources</a></li>    
    </ul>
    <!--language-->
