--- a/Nhacks-master-master/Nhacks-master-master/resources.html
+++ b/Nhacks-master-master/Nhacks-master-master/resources.html
@@ -23,10 +23,10 @@
    <!--menu--------->
    <div class="toggle"></div>
    <ul class="menu">
-   <li class="active"><a href="index.html" >Home</a></li> 
+   <li><a href="index.html" >Home</a></li> 
    <li><a href="game.html">Cure19 Game</a></li> 
    <li><a href="leaderboard.html">Leaderboard</a></li>
-   <li><a href="resources.html">Resources</a></li>    
+   <li  class="active"><a href="resources.html">Resources</a></li>    
    </ul>
    <!--language-->
    <a href="#" class="lang">ENG</a>
@@ -94,4 +94,4 @@
     </div>
     </div>
   </body>
-</html>
+  </html>
